# my_web_test

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  blog_page.html  db.sqlite3  debug_output.html  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  temp_create_page.html  temp_page.html  tox.ini
.github/workflows/: ci.yml
accounts/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_userprofile_user.py
blog/: admin.py  apps.py  feeds.py  forms.py  models.py  sitemaps.py  tests.py  upload_views.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_content.py  0003_alter_post_content.py
blog/templatetags/: blog_extras.py
books/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py
core/: admin.py  apps.py  context_processors.py  forms.py  models.py  sitemaps.py  tests.py  urls.py  views.py
core/management/commands/: load_sample_data.py
core/migrations/: 0001_initial.py
docker/: cleanup.sh  entrypoint.sh  healthcheck.sh  nginx-prod.conf  nginx.conf  supervisord.conf
fixtures/: initial_data.json
locale/ar/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.mo  django.po
media/uploads/: test_permissions.txt
muntazir_portfolio/: asgi.py  urls.py  wsgi.py
muntazir_portfolio/settings/: base.py  dev.py  prod.py  test.py
static/css/: home-fixes.css
static/js/: blog-post.js  ckeditor-file-manager.js  ckeditor-media-enhancements.js  ckeditor-span-iframe-fix.js
staticfiles/: robots.txt
staticfiles/css/: accessibility.css  ckeditor-advanced.css  ckeditor-custom.css  error-pages.css  modern-design.css  performance.css  responsive.css  rtl-support.css  ui-enhancements.css
staticfiles/js/: accessibility.js  ckeditor-enhancements.js  ckeditor-upload-fix.js  ckeditor-url-upload.js  error-pages.js  language-switcher.js  modern-design.js  performance-optimizations.js  sw.js  ui-enhancements.js
templates/: base.html
templates/accounts/: dashboard.html  login.html  password_reset.html  password_reset_confirm.html  profile.html  profile_edit.html  register.html
templates/blog/: category_list.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html  search.html  tag_list.html
templates/books/: book_detail.html  book_form.html  book_list.html
templates/core/: about.html  contact.html  global_search.html  home.html  privacy_policy.html  projects.html  terms_of_service.html
templates/errors/: 403.html  404.html  405.html  500.html
templates/partials/: announcements.html  footer.html  navbar.html
tests/: conftest.py  test_accounts.py  test_blog.py  test_core.py
